[gd_scene load_steps=4 format=2]

[ext_resource path="res://SearchWidget.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://main_theme.tres" type="Theme" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 400.0
margin_bottom = 40.0

[node name="SearchWidget" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 400.0
margin_bottom = 66.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 400.0
margin_bottom = 74.0

[node name="IPAddr" type="LineEdit" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 400.0
margin_bottom = 102.0
placeholder_text = "Server IP Adresse(ohne sie l√§uft hier gar nichts!)"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 400.0
margin_bottom = 110.0

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 400.0
margin_bottom = 128.0
text = "Bereit."

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
visible = false
margin_top = 132.0
margin_right = 400.0
margin_bottom = 136.0

[node name="DataContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 140.0
margin_right = 400.0
margin_bottom = 188.0

[node name="PersonData" type="Label" parent="VBoxContainer/DataContainer"]
margin_right = 69.0
margin_bottom = 48.0
text = "Name:
Alter:
Vorstrafen:"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="search" from="VBoxContainer/SearchWidget" to="." method="_on_SearchWidget_search"]
